app/assets/sass/application.scss
//
// For guidance on how to add CSS and SCSS see:
// https://prototype-kit.service.gov.uk/docs/adding-css-javascript-and-images
//

@import "components/autocomplete";
@import "components/buttons";
@import "components/header";
@import "components/highlight";
@import "components/organisation-logo";
@import "components/service-banner";
@import "components/side-nav";

.unbranded {
	background-color: govuk-functional-colour('surface-background');

	.govuk-main-wrapper {
		background-color: govuk-functional-colour('body-background');
		padding: 40px 60px;
		margin: 40px;
	}

	.govuk-width-container {
		max-width: 1130px;
	}
}

// Updated breadcrumbs margin to match back link
.govuk-breadcrumbs {
	margin-top: 10px;
}

